cmake_minimum_required(VERSION 3.31)
project(reserva_de_turnos)

set(CMAKE_CXX_STANDARD 26)

add_executable(reserva_de_turnos main.cpp
        Model/Config/config.cpp
        Model/Config/configController.h
        Model/User/Client/client.cpp
        Model/User/Client/client.h
        Model/User/Admin/admin.cpp
        Model/User/Admin/admin.h
        Model/User/user.cpp
        Model/User/user.h
        Model/TimeTable/timeTable.cpp
        Model/TimeTable/timeTable.h
        Model/Service/service.cpp
        Model/Service/service.h
        Model/Qualification/qualification.cpp
        Model/Qualification/qualification.h
        Model/Others/Estadisticas/Estadisticas.cpp
        Model/Others/Estadisticas/Estadisticas.h
        Model/Others/Notification/notification.cpp
        Model/Others/Notification/notification.h
        Model/Others/EnumBooking/enumBooking.cpp
        Model/Others/EnumBooking/enumBooking.h
        Model/Others/DtDate/dtDate.cpp
        Model/Others/DtDate/dtDate.h
        Model/Organizacion/Organizacion.cpp
        Model/Organizacion/Organizacion.h
        Model/User/Empleado/Empleado.cpp
        Model/User/Empleado/Empleado.h
        Model/Category/category.cpp
        Model/Category/category.h
        Model/Branch/branch.cpp
        Model/Branch/branch.h
        Model/Reserva/Reserva.cpp
        Model/Reserva/Reserva.h
        Factory/factory.cpp
        Factory/factory.h
        Model/Horario/Horario.cpp
        Model/Horario/Horario.h
        Model/Sucursal/Sucursal.cpp
        Model/Sucursal/Sucursal.h
        Model/Servicio/Servicio.cpp
        Model/Servicio/Servicio.h
        Model/Categoria/Categoria.cpp
        Model/Categoria/Categoria.h
        Relation/EmpleadoServicio/EmpleadoServicio.cpp
        Relation/EmpleadoServicio/EmpleadoServicio.h
        Relation/EmpleadoReserva/empleadoReserva.cpp
        Relation/EmpleadoReserva/EmpleadoReserva.h
        "Relation/ServicioOrganizacion/servicioOrganizacion.cpp"
        "Relation/ServicioOrganizacion/servicioOrganizacion.h"
        Relation/CategoriaServicio/categoriaServicio.cpp
        Relation/CategoriaServicio/categoriaServicio.h
        Relation/ReservaCliente/reservaCliente.cpp
        Relation/ReservaCliente/reservaCliente.h
)
